# balancer_bot

./: .gitignore  CMakeLists.txt  CROSS_COMPILE.md  Dockerfile.cross  LICENSE  README.md  analyze_sim.py  build_cmake  build_pi  pid.conf  setup_permissions.sh  toolchain-rpi4.cmake  ubuntu.sh
.devcontainer/: Dockerfile  devcontainer.json
data/: balance.csv  imu_data.csv  imu_held.csv  imu_still.csv
doc/: Running_on_Pi.md  cross_compile.md
frame/custom/: bumper_V3.stl  pi_shelf_modded.stl  side_panel_18650_v3.stl
px4_stub/: px4_boardconfig.h
px4_stub/uORB/topics/: rate_ctrl_status.h
setup/: 99-iio-perms.rules
xbox_remote/: xbox_remote.cpp  xbox_remote.h
